[package]
name = "solana-yield-farming-vaults"
version = "0.1.0"
description = "Kamino Finance-inspired automated yield farming vaults on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_yield_farming_vaults"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.0"
anchor-spl = "0.30.0"
pyth-solana-receiver-sdk = "0.1.0"
bytemuck = "1.14"
thiserror = "1.0"
